--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimaryDark">#253A4B</color>
     <color name="colorAccent">#03DAC5</color>
+
+
+    <color name="bgColour">#253A4B</color>
+    <color name="white">#ffffff</color>
+    <color name="logo">#CE2A72</color>
+    <color name="logo_fill">#BB86FC</color>
+    <color name="logo1">#54CCEA</color>
+
+    <color name="profileAccentColor">#707070</color>
 </resources>
